test/sema/typeck/fn/variadic-param-wrong-type.out
error: Argument expects value of type `Int32` but got `Bool`.
--> variadic-param-wrong-type.dora:3:7
 | fn f(_x: Int32...) {}
 | fn g() {
 |     f(true);
         ~~~~
 | }
 | 
1 error found.
