test/sema/typeck/fn/variadic-param-wrong-type.dora
fn f(_x: Int32...) {}
fn g() {
    f(true);
}
